fix(input): not allow auto-width inside the flex box
The input box is wrapped inside the flex box and setting it's
width to auto would bring unexpected overflow issues with it's
container which causes overlapping bugs with neighbor elements.

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -299,7 +299,7 @@
 .ui.form .fields .field .ui.input textarea,
 .ui.form .field .ui.input input,
 .ui.form .field .ui.input textarea {
-    width: auto;
+    width: 100%;
 }
 
 & when (@variationFormEqualWidth) or (@variationFormWide) {
